figured out spacing issue

--- a/css/amy.scss
+++ b/css/amy.scss
@@ -64,6 +64,9 @@ body {
 .big-bump-left {
   margin-left: 15%;
 }
+.title-bump-left{
+  margin-left: 25%;
+}
 .header-spacing {
   margin-top: 10px;
 }
